--- a/styles.css
+++ b/styles.css
@@ -359,7 +359,7 @@ footer a{
 
 /*Fichas*/
 ul{padding-left:0px; margin-top:20px; list-style: none;}
-ul li .text{padding-left:0;}
+ul li .text{padding-left:0; padding-top:0;}
 
 .item_list{font-size: 20pt;}
 
@@ -389,6 +389,7 @@ ul li .text{padding-left:0;}
 }
 
 .list li:hover > .text{display:block}
+
 /* ol li .text{
     display:none
 }
