--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,36 @@
     --headers-font:'Josefin Sans', serif;
 }
 
+/*Animation*/
+@keyframes slidein {
+    from {
+      margin-top: 100%;
+      height: 300%; 
+    }
+  
+    to {
+      margin-top: 0%;
+      height: 100%;
+    }
+  }
+
+  @keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+}
+
 /*Position*/
 .flex_column{
     display: flex;
@@ -214,7 +244,9 @@ footer a{
 
     /*Scroll*/
     ::-webkit-scrollbar {width: 0.5rem;}
-    ::-webkit-scrollbar-thumb:hover{background:var(--main-color); border-radius: 1rem;}
+    ::-webkit-scrollbar-thumb:hover{
+        background:var(--main-color); 
+        border-radius: 1rem;}
     ::-webkit-scrollbar-track:hover, ::-webkit-scrollbar-track:active {
         background: #ccd0d8;
         border-radius: 1rem;
@@ -274,7 +306,7 @@ footer a{
     width: 280px;
     padding:0;
     margin:0 5px 15px 5px;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .tab h3{
@@ -293,10 +325,11 @@ footer a{
     top:-191px;
     display:none;
     text-align: justify;
-    animation:slideInUp;
+    animation:slidein;
     animation-duration: 0.6s;
     line-height: 1.5rem;
     overflow-y: auto;
+    overflow-x:hidden;
 }
 
 .tab .paragraph a{
@@ -407,7 +440,7 @@ ul li .text{padding-left:0; padding-top:0;}
     left:50px;
 }
 
-.pulse:hover{animation:heartBeat;
+.pulse:hover{animation:pulse;
 animation-duration:1s;}
 
 .credits a{ 
